syntax = "proto3";

package authproxy_grpc_pb;

option go_package = "github.com/syunkitada/goapp/pkg/authproxy/authproxy_grpc_pb";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

message TraceContext {
    string TraceId = 1;
    string App = 2;
    string Host = 3;
    string ActionName = 4;
    string UserName = 5;
    string RoleName = 6;
    string ProjectName = 7;
    string ProjectRoleName = 8;
    int64  StatusCode = 9;
    string Err = 10;
}

message ActionRequest {
    TraceContext Tctx = 1;
    repeated Query Queries = 2;
}

message Query {
    string Kind = 1;
    map<string, string> StrParams = 2;
    map<string, int64> NumParams = 3;
}

message ActionReply {
    TraceContext Tctx = 1;
    string response = 2;
}
